[project]
name = "jokebot"
version = "0.1.0"
description = "Cli que busca uma piada"
authors = [
    {name = "Henrique B"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "jokebot"
version = "0.1.0"
description = ""
readme = "README.md"

